assets/css/style.css
/* ... */
/* Responsive layout @media queries max-width 599px */

@media screen and (max-width: 599px)
{

#menu {
    text-align: center;
    }
    
.cover-headlines-outer {
    width: 254px;
    height: 107px;
    }

.cover-headlines {
    font-size: 80%;
    width: 234px;
    height: 114px; 
    }

/* about-us boxes on index.html - when the screen is less than 599px wide, make the three boxes stack on top of each other instead of next to each other */
#about-us {
    width: 80%;
    height: auto;
    display: flex;
    flex-direction: column;
    }

    #centre-text {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        margin: 0 auto;
        }

    #left-box {
        width: 100%;
        height: 375px;
        }
        
        #right-box {
        width: 100%;
        height: 375px;
        }
        
        #centre-box {
        width: 100%;
        height: 375px;
        clear: both;
        }

/* testimonials boxes on index.html - when the screen is less than 599px wide, make the three boxes stack on top of each other instead of next to each other */

#testimonials {
    width: 80%;
    height: auto;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    }
    
    #left-box-testimonial {
    width: 100%;
    height: 375px;
    }
    
    #centre-box-testimonial {
    width: 100%;
    height: 375px;
    margin: 5px;
    }
    
    #right-box-testimonial {
    width: 100%;
    height: 420px;
    }

/* footer info boxes - decrease font size and padding for smaller screen sizes */

.footer {
    height: auto;
    padding-bottom: 10px;
    }
    
    .infobox-content-1 {
    font-size: 20px;
    padding-left: 10px;
    }
    
    .title-left {
    line-height: 20px;
    margin: 10px 0px 5px 0px;
    }
    
    .infobox-content-2 {
    font-size: 20px;
    padding-right: 10px;
    word-spacing: 20px;
    width: 50%;
    }
    
    .title-right {
    line-height: 20px;
    margin: 10px 0px 5px 0px;
    }
    
    .social-media-icons {
    font-size: 20px;
    padding-right:20px;
    }
    
    .contact-info {
    font-size: 90%;
    padding-left: 20px;
    } 

/* Contact.html - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */ 
.col-25, .col-75, input[type=submit] {
    width: 100%;
    margin-top: 0;
    }

    .contact-page-outer {
        height: auto;
        width: 90%;
        margin: 0 auto;
        display: block;
        }
        
        .contact-left-side {
        width: 100%;
        height: auto;
        padding: 10px;
        float: none;
        }

        .contact-right-side {
        width: 100%;
        height: auto;
        float: none;
        margin-bottom: 50px;
        }

        .form-title {
            text-align:left;
            padding: none;
        }

        input[type=text], select, textarea {
            font-size: 14px;
}
}

